--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "framer-motion": "^11.9.0",
     "geist": "^1.3.0",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.447.0",
     "next": "^14.2.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
